--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -55,28 +55,34 @@
 					</p>
 				</section>
 
+
+
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
+						<h2>Initializing a Git Repository</h2>
+						<p>1. Create a new directory for your project in your file system</p>
+						<img src="Images/make_directory.png" width="800vw" height="auto">
 					</section>
 					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+						<h2>Initializing a Git Repository</h2>
+						<p>2. Initialize a git repository using the command git init</p>
+						<img src="Images/git_init.png" width="800vw" height="auto">
 					</section>
 					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="transform: rotate(180deg); -webkit-transform: rotate(180deg);">
-						</a>
+						<h2>Initializing a Git Repository</h2>
+						<p>3. Go to <a href="http://github.com">GitHub.com</a> and either login or create an account</p>	
+						<img src="Images/github.com.png" width="800vw" height="auto">
+					</section>
+					<section>
+						<h2>Initializing a Git Repository</h2>
+						<p>4. Indicate that you want to create a new repository</p>	
+						<img src="Images/new_repo_1.png" width="500vw" height="auto">
+					</section>
+					<section>
+						<h2>Initializing a Git Repository</h2>
+						<p>5. Create the repository</p>	
+						<img src="Images/new_repo_2.png" width="700vw" height="auto">
 					</section>
 				</section>
 
